--- a/modules/tiltcheck-core/package.json
+++ b/modules/tiltcheck-core/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
-    "test": "vitest"
+    "test": "vitest --run --passWithNoTests"
   },
   "dependencies": {
     "@tiltcheck/event-router": "workspace:*",
@@ -22,3 +22,4 @@
     "vitest": "^1.0.0"
   }
 }
+
