--- a/services/gameplay-analyzer/package.json
+++ b/services/gameplay-analyzer/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
-    "test": "vitest --run",
+    "test": "vitest --run --passWithNoTests",
     "test:watch": "vitest",
     "clean": "rm -rf dist"
   },
@@ -36,3 +36,4 @@
     "analytics"
   ]
 }
+
