--- a/modules/dad/package.json
+++ b/modules/dad/package.json
@@ -10,7 +10,7 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "clean": "rm -rf dist",
-    "test": "vitest run"
+    "test": "vitest --run --passWithNoTests"
   },
   "dependencies": {
     "@tiltcheck/types": "workspace:*",
@@ -24,3 +24,4 @@
     "@types/uuid": "^10.0.0"
   }
 }
+
