--- a/modules/linkguard/package.json
+++ b/modules/linkguard/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "test": "vitest --run"
+    "test": "vitest --run --passWithNoTests"
   },
   "dependencies": {
     "@tiltcheck/config": "workspace:*",
