--- a/modules/lockvault/package.json
+++ b/modules/lockvault/package.json
@@ -16,7 +16,7 @@
     "build": "tsc -p tsconfig.json",
     "dev": "tsx watch src/index.ts",
     "clean": "rm -rf dist",
-    "test": "vitest --run modules/lockvault"
+    "test": "vitest --run --passWithNoTests"
   },
   "dependencies": {
     "@tiltcheck/event-router": "workspace:*",
@@ -31,3 +31,4 @@
     "@types/node": "^24.10.1"
   }
 }
+
