--- a/services/dashboard/package.json
+++ b/services/dashboard/package.json
@@ -8,7 +8,7 @@
     "dev": "tsx src/server.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/server.js",
-    "test": "vitest --run"
+    "test": "vitest --run --passWithNoTests"
   },
   "dependencies": {
     "express": "^4.19.0",
@@ -20,3 +20,4 @@
     "tsx": "^4.7.0"
   }
 }
+
