--- a/services/game-arena/package.json
+++ b/services/game-arena/package.json
@@ -9,7 +9,7 @@
     "dev": "tsx watch src/server.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/server.js",
-    "test": "vitest --run",
+    "test": "vitest --run --passWithNoTests",
     "test:watch": "vitest"
   },
   "dependencies": {
@@ -32,3 +32,4 @@
     "tsx": "^4.7.0"
   }
 }
+
