--- a/services/pricing-oracle/package.json
+++ b/services/pricing-oracle/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "test": "vitest run services/pricing-oracle"
+    "test": "vitest --run --passWithNoTests"
   },
   "dependencies": {
     "@tiltcheck/types": "workspace:*",
