--- a/services/trust-engines/package.json
+++ b/services/trust-engines/package.json
@@ -6,7 +6,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "tsc --watch"
+    "dev": "tsc --watch",
+    "test": "vitest --run --passWithNoTests tests"
   },
   "dependencies": {
     "@tiltcheck/types": "workspace:*",
@@ -14,6 +15,8 @@
     "@tiltcheck/config": "workspace:*"
   },
   "devDependencies": {
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "vitest": "^4.0.18"
   }
 }
+
