--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -17,6 +17,9 @@
     "@tiltcheck/db": "workspace:*",
     "@tiltcheck/event-types": "workspace:*",
     "@tiltcheck/trust-score-types": "workspace:*",
+    "@tiltcheck/trust-engines": "workspace:*",
+    "@tiltcheck/suslink": "workspace:*",
+    "@tiltcheck/tiltcheck-core": "workspace:*",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
