fix: disable bot-redeploy workflow to prevent pipeline failures
The workflow was failing because detect-changes job is disabled (if: false)
but build-bot depends on it and tries to access its outputs.

This change makes build-bot only run on workflow_dispatch (manual trigger)
to prevent pipeline failures on push events.

--- a/.github/workflows/bot-redeploy.yml
+++ b/.github/workflows/bot-redeploy.yml
@@ -36,8 +36,9 @@ jobs:
 
   build-bot:
     name: Build Discord Bot
-    needs: detect-changes
-    if: needs.detect-changes.outputs.bot-changed == 'true' || github.event_name == 'workflow_dispatch'
+    # NOTE: detect-changes job is disabled, so we run unconditionally when manually triggered
+    # This workflow is intentionally disabled - use deploy-bot.yml for production
+    if: github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
