"chore_final_dependency_sync_and_cleanup"

--- a/apps/discord-bot/package.json
+++ b/apps/discord-bot/package.json
@@ -24,6 +24,7 @@
     "@tiltcheck/tiltcheck-core": "workspace:*",
     "@tiltcheck/triviadrops": "workspace:*",
     "@tiltcheck/trust-engines": "workspace:*",
+    "@tiltcheck/database": "workspace:*",
     "@tiltcheck/justthetip": "workspace:*",
     "@tiltcheck/natural-language-parser": "workspace:*",
     "@tiltcheck/poker": "workspace:*",
