--- a/apps/chrome-extension/src/manifest.json
+++ b/apps/chrome-extension/src/manifest.json
@@ -1,60 +1,22 @@
 {
-  "manifest_version": 3,
-  "name": "TiltGuard Casino Monitor",
-  "version": "1.1.0",
-  "description": "Real-time casino gameplay analysis, tilt detection, and license verification. Protect yourself from tilt with smart interventions.",
-  "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
-  },
-  "permissions": [
-    "storage",
-    "activeTab"
-  ],
-  "host_permissions": [
-    "https://stake.com/*",
-    "https://stake.us/*",
-    "https://roobet.com/*",
-    "https://bc.game/*",
-    "https://duelbits.com/*",
-    "https://rollbit.com/*",
-    "https://shuffle.com/*",
-    "https://gamdom.com/*",
-    "https://*/*"
-  ],
-  "content_scripts": [
+  "name": "TiltCheck",
+  "short_name": "TiltCheck",
+  "description": "Real-time gambling behavior tracker, tilt detection, and bankroll management tools.",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#0f1419",
+  "theme_color": "#0f1419",
+  "orientation": "portrait",
+  "icons": [
     {
-      "matches": [
-        "https://stake.com/*",
-        "https://stake.us/*",
-        "https://roobet.com/*",
-        "https://bc.game/*",
-        "https://duelbits.com/*",
-        "https://rollbit.com/*",
-        "https://shuffle.com/*",
-        "https://gamdom.com/*",
-        "https://*/*"
-      ],
-      "exclude_matches": [
-        "https://discord.com/*",
-        "https://*.discord.com/*",
-        "https://google.com/*",
-        "https://*.google.com/*",
-        "https://github.com/*",
-        "https://*.github.com/*",
-        "http://localhost:3333/*"
-      ],
-      "js": ["content.js"],
-      "run_at": "document_idle"
+      "src": "/icons/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
-  ],
-  "action": {
-    "default_popup": "popup.html",
-    "default_icon": {
-      "16": "icons/icon16.png",
-      "48": "icons/icon48.png",
-      "128": "icons/icon128.png"
-    }
-  }
+  ]
 }
