elasitcsearch tiltagent 6phases

--- a/apps/discord-bot/.env.example
+++ b/apps/discord-bot/.env.example
@@ -19,3 +19,6 @@ TRUST_THRESHOLD=60
 # Dashboard Integration (optional)
 # Point to your running dashboard service
 DASHBOARD_URL=http://localhost:5055
+
+DEMO_USER_ID=1153034319271559328
+ELASTIC_API_KEY=
