--- a/apps/discord-bot/package.json
+++ b/apps/discord-bot/package.json
@@ -15,6 +15,7 @@
     "clear:names": "tsx src/cleanup-commands.ts"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^8.19.1",
     "@tiltcheck/collectclock": "workspace:*",
     "@tiltcheck/config": "workspace:*",
     "@tiltcheck/database": "workspace:*",
