change tip architecture to use bot wallet, auto pay tipped users with set wallet, implement lock wallet feature

--- a/apps/discord-bot/.env.example
+++ b/apps/discord-bot/.env.example
@@ -20,5 +20,7 @@ TRUST_THRESHOLD=60
 # Point to your running dashboard service
 DASHBOARD_URL=http://localhost:5055
 
-DEMO_USER_ID=1153034319271559328
-ELASTIC_API_KEY=
+# Elasticsearch (Elastic Cloud Serverless)
+ELASTIC_URL=https://your-deployment.es.us-central1.gcp.elastic.cloud
+ELASTIC_API_KEY=your_elastic_api_key_here
+DEMO_USER_ID=your_discord_user_id
