--- a/packages/retry-utility/package.json
+++ b/packages/retry-utility/package.json
@@ -7,7 +7,8 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "tsc --watch",
+    "test": "vitest",
+    "test:watch": "vitest",
     "clean": "rm -rf dist"
   },
   "devDependencies": {
