--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "optimize:images": "node scripts/optimize-images.js",
     "lighthouse:landing": "node scripts/run-lighthouse.js",
     "build:search-index": "node scripts/build-search-index.js",
-    "lighthouse:ci": "node scripts/lighthouse-ci.js"
+    "lighthouse:ci": "node scripts/lighthouse-ci.js",
+    "changelog": "npx tsx scripts/generate-changelog.ts"
   },
   "devDependencies": {
     "@types/bcryptjs": "^3.0.0",
