--- a/packages/monitoring/package.json
+++ b/packages/monitoring/package.json
@@ -18,10 +18,15 @@
     "clean": "rm -rf dist",
     "test": "vitest --run --passWithNoTests"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@tiltcheck/logger": "workspace:*",
+    "prom-client": "^15.1.3",
+    "uuid": "^13.0.0"
+  },
   "devDependencies": {
-    "typescript": "^5.3.0",
     "@sentry/node": "^7.0.0",
+    "@types/uuid": "^10.0.0",
+    "typescript": "^5.3.0"
   },
   "peerDependencies": {
     "@sentry/node": "^7.0.0",
