--- a/modules/triviadrops/tsconfig.json
+++ b/modules/triviadrops/tsconfig.json
@@ -12,8 +12,8 @@
     "declarationMap": true,
     "sourceMap": true,
     "outDir": "dist",
-    "rootDir": "."
+    "rootDir": "src"
   },
-  "include": ["**/*.ts"],
+  "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "dist"]
 }
