--- a/apps/chrome-extension/package.json
+++ b/apps/chrome-extension/package.json
@@ -1,21 +1,15 @@
 {
-  "name": "@tiltcheck/browser-extension",
-  "version": "1.1.0",
-  "description": "TiltGuard browser extension for casino fairness analysis and tilt detection",
+  "name": "@tiltcheck/core",
+  "version": "0.1.0",
   "private": true,
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "type": "module",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "node build.js",
-    "watch": "node build.js --watch",
-    "clean": "rm -rf dist",
-    "server": "node server/api.js",
-    "dev": "concurrently \"npm run watch\" \"npm run server\"",
-    "zip": "cd dist && zip -r ../tiltcheck-extension.zip ."
-  },
-  "devDependencies": {
-    "@types/chrome": "^0.1.31",
-    "concurrently": "^9.2.1",
-    "esbuild": ">=0.25.0",
-    "typescript": "^5.3.2"
+    "build": "tsc",
+    "dev": "tsc -w"
   }
 }
