--- a/package.json
+++ b/package.json
@@ -1,109 +1,15 @@
 {
-  "name": "tiltcheck-monorepo",
+  "name": "@tiltcheck/event-types",
   "version": "0.1.0",
   "private": true,
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "type": "module",
-  "description": "TiltCheck Ecosystem - Built by a degen, for degens",
-  "author": "jmenichole",
-  "license": "UNLICENSED",
-  "packageManager": "pnpm@10.0.0",
-  "engines": {
-    "node": ">=18.0.0",
-    "pnpm": ">=10.0.0"
-  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "dev": "turbo dev",
-    "dev:bots": "turbo dev --filter @tiltcheck/discord-bot --filter @tiltcheck/dad-bot --filter @tiltcheck/justthetip-bot",
-    "build": "turbo build",
-    "build:ordered": "bash scripts/ordered-build.sh",
-    "build:legacy": "pnpm -r --workspace-concurrency=1 build",
-    "test": "turbo test",
-    "test:watch": "vitest",
-    "test:all": "turbo test",
-    "coverage": "vitest run --coverage",
-    "coverage:ci": "CI=true vitest run --coverage",
-    "lint": "turbo lint",
-    "lint:fix": "turbo lint -- --fix",
-    "typecheck": "turbo typecheck",
-    "clean": "turbo clean && rm -rf node_modules",
-    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
-    "bundle:bot": "node scripts/bundle-bot.mjs",
-    "bundle:bots": "node scripts/bundle-bot.mjs --all",
-    "deploy:gcloud": "bash scripts/deploy-gcloud.sh",
-    "deploy:gcloud:update": "bash scripts/deploy-gcloud.sh --update",
-    "bundle:components": "bash scripts/bundle-components.sh",
-    "contrast": "node scripts/contrast-check.cjs",
-    "contrast:dom": "node scripts/contrast-check-dom.cjs",
-    "a11y:serve": "node scripts/serve-components.cjs",
-    "a11y:audit": "bash scripts/a11y-audit.sh",
-    "a11y:serve:landing": "node scripts/serve-landing.cjs",
-    "a11y:audit:landing": "bash scripts/landing-a11y-audit.sh",
-    "test:components": "node scripts/validate-components.cjs",
-    "audit:all": "pnpm test:components && pnpm bundle:components && pnpm contrast && pnpm contrast:dom && pnpm a11y:audit && pnpm a11y:audit:landing",
-    "audit:images": "node scripts/audit-images.js",
-    "audit:a11y:landing": "node scripts/a11y-regression-landing.js",
-    "ci:landing": "vitest --run landing-image-integration.test.ts && pnpm audit:images && pnpm audit:a11y:landing",
-    "ci:validate": "node scripts/validate-and-fix-ci.cjs",
-    "optimize:images": "node scripts/optimize-images.js",
-    "lighthouse:landing": "node scripts/run-lighthouse.js",
-    "build:search-index": "node scripts/build-search-index.js",
-    "lighthouse:ci": "node scripts/lighthouse-ci.js",
-    "changelog": "npx tsx scripts/generate-changelog.ts",
-    "audit:deps": "npx tsx scripts/audit-deps.ts"
-  },
-  "devDependencies": {
-    "@types/bcryptjs": "^3.0.0",
-    "@types/jsdom": "^21.1.0",
-    "@types/node": "^25.3.0",
-    "@types/supertest": "^6.0.2",
-    "@typescript-eslint/eslint-plugin": "^8.9.0",
-    "@typescript-eslint/parser": "^8.9.0",
-    "@vitest/coverage-v8": "^4.0.18",
-    "encoding": "^0.1.13",
-    "eslint": "^9.12.0",
-    "eslint-config-prettier": "^9.1.0",
-    "http-server": "^14.1.1",
-    "jsdom": "^28.1.0",
-    "lighthouse": "^12.0.0",
-    "lunr": "^2.3.9",
-    "pa11y": "^9.0.1",
-    "prettier": "^3.1.0",
-    "puppeteer": "^24.31.0",
-    "sharp": "^0.34.5",
-    "supertest": "^7.0.0",
-    "turbo": "^2.8.10",
-    "typescript": "^5.3.0",
-    "typescript-eslint": "^8.9.0",
-    "vitest": "^4.0.18"
-  },
-  "pnpm": {
-    "overrides": {
-      "bigint-buffer": "npm:@gsknnft/bigint-buffer@1.3.2",
-      "esbuild@<=0.24.2": ">=0.25.0",
-      "@types/react": "18.3.1",
-      "@types/react-dom": "18.3.1",
-      "semver@>=7.0.0 <7.5.2": ">=7.5.2",
-      "jws@<3.2.3": ">=3.2.3",
-      "systeminformation@<5.27.14": ">=5.27.14",
-      "lodash-es@>=4.0.0 <=4.17.22": ">=4.17.23",
-      "lodash@>=4.0.0 <=4.17.22": ">=4.17.23",
-      "undici@<6.23.0": ">=6.23.0",
-      "qs@<6.14.1": ">=6.14.1",
-      "qs@>=6.7.0 <=6.14.1": ">=6.14.2",
-      "ajv@<6.14.0": ">=6.14.0",
-      "minimatch@<3.1.3": ">=3.1.3",
-      "minimatch@>=9.0.0 <9.0.6": ">=9.0.6"
-    },
-    "onlyBuiltDependencies": [
-      "@gsknnft/bigint-buffer",
-      "bufferutil",
-      "core-js",
-      "es5-ext",
-      "esbuild",
-      "msgpackr-extract",
-      "puppeteer",
-      "sharp",
-      "utf-8-validate"
-    ]
+    "build": "tsc",
+    "dev": "tsc -w"
   }
 }
