--- a/packages/express-utils/package.json
+++ b/packages/express-utils/package.json
@@ -1,11 +1,22 @@
 {
   "name": "@tiltcheck/express-utils",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Shared Express middleware and utilities for TiltCheck services",
-  "main": "src/index.js",
-  "type": "commonjs",
+  "private": true,
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "type": "module",
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "build": "tsc",
+    "dev": "tsc -w"
+  },
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21"
   }
 }
-
