--- a/apps/discord-bot/package.json
+++ b/apps/discord-bot/package.json
@@ -36,7 +36,8 @@
     "@tiltcheck/types": "workspace:*",
     "@tiltcheck/walletcheck": "workspace:*",
     "discord.js": "^14.14.1",
-    "dotenv": "^17.3.1"
+    "dotenv": "^17.3.1",
+    "@tiltcheck/gameplay-analyzer": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^25.3.0",
