--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "changelog": "npx tsx scripts/generate-changelog.ts",
     "audit:deps": "npx tsx scripts/audit-deps.ts",
     "ingest:regulations": "node scripts/ingest-regulations-us.mjs",
-    "ingest:regulations:bootstrap": "node scripts/ingest-regulations-us.mjs --bootstrap"
+    "ingest:regulations:bootstrap": "node scripts/ingest-regulations-us.mjs --bootstrap",
+    "sync:regulations": "node scripts/sync-regulations-us.mjs",
+    "sync:regulations:dry": "node scripts/sync-regulations-us.mjs --dry-run"
   },
   "devDependencies": {
     "@types/bcryptjs": "^3.0.0",
@@ -109,4 +111,3 @@
     ]
   }
 }
-
