--- a/apps/chrome-extension/package.json
+++ b/apps/chrome-extension/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tiltcheck/core",
-  "version": "0.1.0",
+  "version": "1.1.0",
   "private": true,
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -9,11 +9,18 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc",
-    "dev": "tsc -w"
+    "build": "node build.js",
+    "build:tsc": "tsc",
+    "dev": "node build.js --watch"
   },
   "devDependencies": {
-    "@types/chrome": "^0.1.37"
+    "@types/chrome": "^0.1.37",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
+    "esbuild-plugin-polyfill-node": "^0.3.0",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "vm-browserify": "^1.1.2"
   },
   "dependencies": {
     "@tiltcheck/utils": "workspace:*"
