local dev auth callback link updated for testing

--- a/apps/chrome-extension/src/manifest.json
+++ b/apps/chrome-extension/src/manifest.json
@@ -16,8 +16,7 @@
     "service_worker": "background.js"
   },
   "action": {
-    "default_title": "TiltCheck",
-    "default_popup": "popup.html"
+    "default_title": "TiltCheck"
   },
   "content_scripts": [
     {
