chore: unify docker deployment infrastructure

--- a/.env.example
+++ b/.env.example
@@ -1,41 +1,72 @@
 # ==============================================
-# TILTCHECK MONOREPO - MASTER ENVIRONMENT CONFIG
+# TILTCHECK MONOREPO - MASTER ENVIRONMENT EXAMPLE
 # ==============================================
-# Rename this file to .env and fill in the corresponding values.
 
 # --- CORE DEPLOYMENT ---
 NODE_ENV=development
-PORT=8080
+PORT=3001
 PUBLIC_BASE_URL=http://localhost:3000
-A11Y_PORT=5178
-LANDING_PORT=5190
-UPDATE_SNAPSHOTS=false
-CI=false
+API_URL=http://localhost:3000/api
+BACKEND_URL=http://localhost:3000
+NEXT_PUBLIC_BACKEND_URL=http://localhost:3000
+DASHBOARD_URL=http://localhost:3000/dashboard
+TILTCHECK_API_URL=http://localhost:3000/api
+WS_URL=ws://localhost:3000/ws
+ALLOWED_ORIGINS=http://localhost:3001,https://tiltcheck.me
+
+# --- CHANNELS & ROLES ---
+TRUST_ALERTS_CHANNEL_ID=
+SUPPORT_CHANNEL_ID=
+MOD_CHANNEL_ID=
+MOD_ROLE_ID=
 
 # --- SECURITY & AUTH ---
 JWT_SECRET=your_jwt_secret_min_32_chars
 SESSION_SECRET=your_session_secret_min_32_chars
+SERVICE_JWT_SECRET=your_service_jwt_secret_min_32_chars
+SERVICE_ID=api-gateway
 ADMIN_PASSWORD=
-ALLOWED_ORIGINS=http://localhost:3000,https://tiltcheck.me
-NEWSLETTER_SALT=tiltcheck-salt
+NEWSLETTER_SALT=
+AUTH_REDIRECT_URL=http://localhost:3000/auth/callback
 
-# Admin IP Whitelist (Optional)
-ADMIN_IP_1=
-ADMIN_IP_2=
-ADMIN_IP_3=
+# --- COOKIES ---
+COOKIE_DOMAIN=localhost
+COOKIE_MAX_AGE=604800
+COOKIE_SECURE=false
+SESSION_COOKIE_NAME=tiltcheck_session
 
-# --- DISCORD BOTS ---
-# General
-DISCORD_TOKEN=
-DISCORD_CLIENT_ID=
+# --- DATABASE ---
+DATABASE_URL=postgresql://user:pass@localhost:5432/tiltcheck
+NEON_DATABASE_URL=
+DATABASE_POOL_SIZE=10
+DATABASE_SSL=false
 
-# TiltBot
+# --- BLOCKCHAIN (SOLANA) ---
+SOLANA_NETWORK=mainnet
+SOLANA_RPC_URL=https://api.mainnet-beta.solana.com
+JUSTTHETIP_FEE_WALLET=
+GAS_WALLET_PUBLIC=
+
+# --- ELASTICSEARCH & TELEMETRY ---
+ELASTIC_URL=
+ELASTIC_API_KEY=
+DEMO_USER_ID=
+LOG_LEVEL=debug
+
+# --- SUPABASE ---
+SUPABASE_URL=
+SUPABASE_ANON_KEY=
+SUPABASE_PUBLISHABLE_KEY=
+SUPABASE_SERVICE_ROLE_KEY=
+
+# --- DISCORD BOT: TILTCHECK ---
 TILT_DISCORD_BOT_TOKEN=
 TILT_DISCORD_CLIENT_ID=
+TILT_DISCORD_CLIENT_SECRET=
 TILT_DISCORD_GUILD_ID=
 TILT_DISCORD_BOT_INVITE_LINK=
 
-# TipBot / JustTheTip
+# --- DISCORD BOT: JUSTTHETIP ---
 TIP_DISCORD_BOT_TOKEN=
 TIP_DISCORD_CLIENT_ID=
 TIP_DISCORD_GUILD_ID=
@@ -46,80 +77,46 @@ TIP_DISCORD_RULES_CHANNEL_ID=
 TIP_DISCORD_ANNOUNCEMENT_CHANNEL_ID=
 TIP_DISCORD_WELCOME_CHANNEL_ID=
 
-# --- DATABASE (SUPABASE) ---
-SUPABASE_URL=https://your-project.supabase.co
-SUPABASE_ANON_KEY=your-anon-key
-SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
-SUPABASE_PUBLISHABLE_KEY=your-publishable-key
+# --- DISCORD BOT: DA&D ---
+DAD_DISCORD_BOT_TOKEN=
+DAD_DISCORD_CLIENT_ID=
+DAD_DISCORD_GUILD_ID=
 
-# --- BLOCKCHAIN (SOLANA) ---
-SOLANA_RPC_URL=https://api.mainnet-beta.solana.com
-JUSTTHETIP_FEE_WALLET=
-GAS_WALLET_PUBLIC=
-
-# --- MONITORING & OBSERVABILITY ---
-ELASTIC_URL=
-ELASTIC_API_KEY=
-LOGFLARE_API_KEY=
-LOGFLARE_SOURCE_ID=
-METRICS_ENDPOINT=http://localhost:9090/push
-SENTRY_DSN=
-DISCORD_ALERT_WEBHOOK_URL=
-ALERT_WEBHOOK_URL=
-LOG_LEVEL=debug
-
-# --- FEATURE FLAGS & APP SETTINGS ---
-TRUST_THRESHOLD=60
+# --- FEATURE FLAGS & COMMON SETTINGS ---
 SUSLINK_AUTO_SCAN=true
-ENABLE_CASINO_VERIFICATION=true
-DEMO_USER_ID=111222333444555666
-OPENAI_API_KEY=
-AI_GATEWAY_URL=
-SKIP_DISCORD_LOGIN=false
-
-# Data Directories
-TRIVIA_STORE_PATH=./data/trivia-store.json
-TRUST_ENGINES_PERSIST_DIR=./data
-TRUST_ENGINES_LOG_DIR=./logs/trust-engines
-TRUST_ENGINES_LOG_ERRORS=0
-LOCKVAULT_STORE_PATH=./data/lockvault-store.json
-PENDING_TIPS_STORE_PATH=./data/pending-tips-store.json
-COLLECTCLOCK_LOG_DIR=./logs/collectclock
-LANDING_LOG_PATH=./logs/landing.log
-
-# --- INTERNAL SERVICES & API ---
-# Backend URLs
-BACKEND_URL=http://localhost:3000
-NEXT_PUBLIC_BACKEND_URL=http://localhost:3000
-DASHBOARD_URL=http://localhost:3000/dashboard
-TILTCHECK_API_URL=http://localhost:3000/api
-TILTCHECK_API_KEY=
-CASINO_API_KEY=tiltcheck-casino-collector-2024
-CASINO_API_PORT=6002
-GAUGE_ADMIN_TOKEN=
-REQUIRED_TRUST_LEVEL=0
-
-# --- DASHBOARD SETTINGS ---
-DASHBOARD_POLL_MS=30000
-DASHBOARD_EVENTS_KEEP_DAYS=7
-EVIDENCE_RETENTION_DAYS=30
-EVIDENCE_MAX_COUNT=1000
-
-# --- MODERATION & CHANNELS ---
-TRUST_ALERTS_CHANNEL_ID=
-SUPPORT_CHANNEL_ID=
-MOD_CHANNEL_ID=
-MOD_ROLE_ID=
+TRUST_THRESHOLD=60
 MOD_NOTIFICATIONS_ENABLED=true
 MOD_RATE_LIMIT_WINDOW_MS=60000
 MOD_MAX_NOTIFICATIONS_PER_WINDOW=10
 MOD_DEDUPE_WINDOW_MS=300000
+SKIP_DISCORD_LOGIN=false
+ENABLE_CASINO_VERIFICATION=true
+COMMAND_PREFIX=/
+OWNER_ID=
+
+# --- APP SPECIFIC: AUTO-CLAIMER ---
+FOUNDER_USERNAMES=jmenichole
+
+# --- APP SPECIFIC: DISCORD BOTS ---
+JUPITER_ENDPOINT=https://api.jup.ag/ultra
+JUPITER_API_KEY=
+TIP_TREASURY_WALLET=
+TIP_FEE_WALLET=
+
+# --- DATA STORAGE & LOGGING ---
+LOCKVAULT_STORE_PATH=./data/lockvault-store.json
+PENDING_TIPS_STORE_PATH=./data/pending-tips-store.json
+COLLECTCLOCK_LOG_DIR=./logs/collectclock
+LANDING_LOG_PATH=./logs/landing.log
+TRUST_ENGINES_LOG_DIR=./logs/trust-engines
+TRUST_ENGINES_PERSIST_DIR=./data
 
 # --- HEALTH CHECK PORTS ---
 DISCORD_BOT_HEALTH_PORT=8081
 DAD_BOT_HEALTH_PORT=8082
 EVENT_ROUTER_HEALTH_PORT=8083
 
-# --- BOT CONFIG ---
-COMMAND_PREFIX=/
-OWNER_ID=
+# --- EXTERNAL APIS ---
+OPENAI_API_KEY=
+CASINO_API_KEY=
+CASINO_API_PORT=6002
