--- a/apps/dashboard/Dockerfile
+++ b/apps/dashboard/Dockerfile
@@ -1,5 +1,5 @@
-# TiltCheck Trust Rollup - Standalone Container
-# Build from monorepo root: docker build -f apps/trust-rollup/Dockerfile .
+# TiltCheck Dashboard - Standalone Container
+# Build from monorepo root: docker build -f apps/dashboard/Dockerfile .
 
 FROM node:20-alpine AS build
 
@@ -14,16 +14,13 @@ COPY package.json pnpm-workspace.yaml pnpm-lock.yaml .npmrc tsconfig.json ./
 # Copy all workspace sources needed
 COPY packages/ ./packages/
 COPY modules/ ./modules/
-COPY apps/trust-rollup/ ./apps/trust-rollup/
+COPY apps/dashboard/ ./apps/dashboard/
 
 # Install dependencies
 RUN NODE_ENV=development pnpm install --no-frozen-lockfile
 
 # Build all packages
 RUN pnpm -r build
-
-# Prune dev dependencies
-RUN pnpm prune --prod
 
 # Production stage
 FROM node:20-alpine
@@ -36,6 +33,6 @@ WORKDIR /app
 
 COPY --from=build /app /app
 
-EXPOSE 8083
+EXPOSE 3000
 
-CMD ["node", "apps/trust-rollup/dist/index.js"]
+CMD ["pnpm", "--filter", "@tiltcheck/dashboard", "start"]
