fix: add pricing-oracle to docker contexts to resolve monorepo deps

--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -15,6 +15,7 @@ COPY package.json pnpm-workspace.yaml pnpm-lock.yaml .npmrc tsconfig.json ./
 COPY packages/ ./packages/
 COPY modules/ ./modules/
 COPY apps/api/ ./apps/api/
+COPY apps/pricing-oracle/ ./apps/pricing-oracle/
 
 # Install dependencies
 RUN NODE_ENV=development pnpm install --no-frozen-lockfile
