--- a/apps/dad-bot/Dockerfile
+++ b/apps/dad-bot/Dockerfile
@@ -15,6 +15,7 @@ COPY package.json pnpm-workspace.yaml pnpm-lock.yaml .npmrc tsconfig.json ./
 COPY packages/ ./packages/
 COPY modules/ ./modules/
 COPY apps/dad-bot/ ./apps/dad-bot/
+COPY apps/pricing-oracle/ ./apps/pricing-oracle/
 
 # Install and build
 RUN NODE_ENV=development pnpm install --no-frozen-lockfile
